@@ -1,0 +1,6 @@
+icondir=${datadir}/icons/hicolor/48x48/apps
+icon_DATA = \
+	nm-device-wireless.png
+
+EXTRA_DIST = $(icon_DATA)
+
