@@ -1,2 +1,2 @@
-SUBDIRS=16 22 32 scalable
+SUBDIRS=16 22 32 48 scalable
 
